[package]
name = "seafrepo"
version = "0.1.0"
edition = "2021"

[dependencies]
bimap = "0.6.3"
clap = { version = "4.5.28", features = ["derive"] }
flate2 = { version = "1.0.35", features = ["zlib"] }
fuser = "0.15.1"
libc = "0.2.169"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
walkdir = "2"
