[package]
name = "seafuse"
version = "0.1.0"
edition = "2021"

[dependencies]
bimap = "0.6.3"
clap = { version = "4.5.28", features = ["derive"] }
escape-bytes = "0.1.1"
flate2 = { version = "1.0.35", features = ["zlib"] }
fuser = "0.15.1"
libc = "0.2.169"
log = "0.4.27"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
simple_logger = "5.0.0"
walkdir = "2"

[dev-dependencies]
tempdir = "0.3.7"
